[gd_scene load_steps=3 format=3 uid="uid://cbq8trtq08me0"]

[ext_resource type="Script" path="res://scenes/utility/popups.gd" id="1_dsxow"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ff382"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0, 0.501961, 0.784314, 0.588235)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Popups" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dsxow")

[node name="UI" type="CanvasLayer" parent="."]

[node name="SkillPopup" type="PopupPanel" parent="UI"]
unique_name_in_owner = true
size = Vector2i(530, 300)
theme_override_styles/panel = SubResource("StyleBoxFlat_ff382")

[node name="VB" type="VBoxContainer" parent="UI/SkillPopup"]
offset_left = 15.0
offset_top = 15.0
offset_right = 515.0
offset_bottom = 285.0

[node name="NameLabel" type="Label" parent="UI/SkillPopup/VB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Name"

[node name="DescriptionLabel" type="Label" parent="UI/SkillPopup/VB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
text = "Egon’s raw strength is legendary, and when he really puts his muscle into it, there’s no enemy that can stand in his way. With \"Crushing Blow,\" Egon unleashes a devastating attack that deals massive extra damage. This skill represents Egon’s ability to land a hit so powerful, it can shatter defenses and leave opponents reeling. The impact of this blow is so intense that it has a chance to deal critical damage, making Egon’s presence on the battlefield impossible to ignore."
autowrap_mode = 3
justification_flags = 161

[node name="ItemPopup" type="PopupPanel" parent="UI"]
unique_name_in_owner = true
auto_translate_mode = 1
size = Vector2i(530, 704)
visible = true
theme_override_styles/panel = SubResource("StyleBoxFlat_ff382")

[node name="VB" type="VBoxContainer" parent="UI/ItemPopup"]
offset_left = 15.0
offset_top = 15.0
offset_right = 515.0
offset_bottom = 689.0

[node name="ItemNameLabel" type="Label" parent="UI/ItemPopup/VB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Name"

[node name="ItemDescriptionLabel" type="Label" parent="UI/ItemPopup/VB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
text = "Egon’s raw strength is legendary, and when he really puts his muscle into it, there’s no enemy that can stand in his way. With \"Crushing Blow,\" Egon unleashes a devastating attack that deals massive extra damage. This skill represents Egon’s ability to land a hit so powerful, it can shatter defenses and leave opponents reeling. The impact of this blow is so intense that it has a chance to deal critical damage, making Egon’s presence on the battlefield impossible to ignore."
autowrap_mode = 3
justification_flags = 161
